Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/7129225/TestImportStar.out
- compiler.note.proc.messager: RUNNING - lastRound = false
TestImportStar.java:16:1: compiler.err.doesnt.exist: xxx
- compiler.note.proc.messager: RUNNING - lastRound = true
1 error
